bugfix: add horse image, resize, fix jumping issue

--- a/style.css
+++ b/style.css
@@ -22,12 +22,14 @@ body {
   }
   
   #horse {
-    width: 40px;
-    height: 40px;
-    background-color: black;
+    width: 100px;
+    height: 72px;
     position: absolute;
     bottom: 40px;
     left: 50px;
+    background-image: url("horse.png");
+    background-size: cover;
+    background-repeat: no-repeat;
   }
   
   #barrel {
